[package]
name = "spi-flash"
version = "0.3.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"
repository = "https://github.com/adamgreig/spi-flash-rs"
license = "Apache-2.0 OR MIT"
description = "SPI flash memory interface crate"

[dependencies]
log = "0.4.17"
jep106 = { version = "0.3.0", optional = true }
thiserror = { version = "2.0.14", optional = true }
indicatif = { version = "0.18.0", optional = true }
embedded-hal = "1.0.0"

[features]
default = ["std"]
std = ["jep106", "thiserror", "indicatif"]
